added sessions
