# src/main/resources/openapi.yaml
@@ -28,6 +28,7 @@ paths:
       operationId: getCard
       summary: get card
       description: get card
+
       responses:
         200:
           description: Success
@@ -36,8 +37,53 @@ paths:
               schema:
                 $ref: '#/components/schemas/CardResponse'
 
+  /guess:
+    post:
+      tags:
+        - mtg
+      operationId: guess
+      summary: guess
+      description: guess
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/GuessRequest"
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GameResponse'
+
 components:
   schemas:
+    GuessRequest:
+      type: object
+      required:
+        - cardName
+      properties:
+        cardName:
+          type: string
+          description: Card name guessed
+    GameResponse:
+      type: object
+      properties:
+        numberOfGuesses:
+          type: integer
+          description: Number of guesses
+        hintsProvided:
+          type: array
+          items:
+            type: string
+        gameStatus:
+          type: string
+        message:
+          type: string
+
+
     HelloResponse:
       description: Successful response
       type: string
